--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BL'
 - !lcsh 'Phallicism'
+- GITenberg
 title: Fishes, Flowers, & Fire as Elements and Deities in the Phallic Faiths & Worship
   of the Ancient Religions of Greece, Babylon, Rome, India, &c.
 url: http://www.gutenberg.org/ebooks/37713
